Se creo diseño en index para formulario de contacto

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,10 @@
-%h1 Home#index
-%p Find me in app/views/home/index.html.haml
+.main
+  .site-heading
+    %h1 Mayordomo Virtual
+    %hr.small
+    %span.subheading Líderes en servicios de outsourcing empresarial
+
+  %h1.text-center
+    Comunícate sin costo alguno! 01800 4567 890
+
+  %p.text-center Regístrate Aquí
