--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,50 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800");
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
+body {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  color: #333333;
+}
+
+hr.small {
+  max-width: 100px;
+  margin: 15px auto;
+  border-width: 4px;
+  border-color: #fff;
+}
+
+.subheading {
+  font-size: 25px;
+  line-height: 1.1;
+  display: block;
+  font-weight: 300;
+  margin: 10px 0 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 800;
+}
+
+.main {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: auto;
+  overflow-y: hidden;
+  background: url(bg-pattern.png), #7b4397;
+  background: url(bg-pattern.png), -webkit-linear-gradient(to left,#001f3f,#39CCCC);
+  background: url(bg-pattern.png), linear-gradient(to left,#001f3f,#39CCCC);
+  color: #fff;
+  text-align: center;
+  .site-heading h1 {
+    font-size: 70px;
+  }
+}
