--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,3 +50,81 @@ h6 {
 .contact-form {
   margin-top: 20px;
 }
+
+.alert {
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.11);
+  display: table;
+  width: 100%;
+}
+
+.alert-white {
+  background-image: linear-gradient(to bottom, #fff, #f9f9f9);
+  border-top-color: #d8d8d8;
+  border-bottom-color: #bdbdbd;
+  border-left-color: #cacaca;
+  border-right-color: #cacaca;
+  color: #404040;
+  padding-left: 61px;
+  position: relative;
+  &.rounded {
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    .icon {
+      border-radius: 3px 0 0 3px;
+      -webkit-border-radius: 3px 0 0 3px;
+    }
+  }
+  .icon {
+    text-align: center;
+    width: 45px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid #bdbdbd;
+    padding-top: 15px;
+    &:after {
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      transform: rotate(45deg);
+      display: block;
+      content: '';
+      width: 10px;
+      height: 10px;
+      border: 1px solid #bdbdbd;
+      position: absolute;
+      border-left: 0;
+      border-bottom: 0;
+      top: 50%;
+      right: -6px;
+      margin-top: -3px;
+      background: #fff;
+    }
+    i {
+      font-size: 20px;
+      color: #fff;
+      left: 12px;
+      margin-top: -10px;
+      position: absolute;
+      top: 50%;
+    }
+  }
+}
+
+/*============ colors ========*/
+
+.alert-success {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+}
+
+.alert-white.alert-success .icon,
+.alert-white.alert-success .icon:after {
+  border-color: #54a754;
+  background: #60c060;
+}
