--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,10 +1,9 @@
 .main
   .site-heading
-    %h1= fa_icon("hand-pointer-o", text: "Mayordomo Virtual")
-    %hr.small
+    = image_tag "mvirtual.png", size: "300x100"
     %span.subheading Líderes en servicios de outsourcing empresarial
 
-  %h1.text-center
+  %h2.text-center
     Comunícate sin costo alguno!
     %span.text-danger 01800 4567 890
 
