Se agregaron datos al cuerpo del mail

--- a/app/views/contacts_mailer/submitted.html.haml
+++ b/app/views/contacts_mailer/submitted.html.haml
@@ -1,3 +1,9 @@
 %h1 Has recibido un nuevo comentario de #{@contact.email}
 
 %p= @contact.comment
+
+%hr
+
+%small Teléfono: #{@contact.phone}
+%small Teléfono Alternativo: #{@contact.cel_phone}
+%small Ciudad: #{@contact.city}
