--- a/app/views/contacts_mailer/submitted.text.haml
+++ b/app/views/contacts_mailer/submitted.text.haml
@@ -1,3 +1,7 @@
 Has recibido un nuevo comentario de #{@contact.email}
 
 = @contact.comment
+
+Teléfono: #{@contact.phone}
+Teléfono Alternativo: #{@contact.cel_phone}
+Ciudad: #{@contact.city}
