--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,11 @@
 body {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333333;
+  background: image-url("background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .subheading {
@@ -30,9 +35,6 @@ h6 {
   width: 100%;
   min-height: auto;
   overflow-y: hidden;
-  background: image-url("bg-pattern.png"), #7b4397;
-  background: image-url("bg-pattern.png"), -webkit-linear-gradient(to left,#001f3f,#33b3a6);
-  background: image-url("bg-pattern.png"), linear-gradient(to left,#001f3f,#33b3a6);
   color: #fff;
   text-align: center;
   .site-heading h1 {
@@ -41,7 +43,15 @@ h6 {
 }
 
 .contact-form {
+  padding: 15px;
+  border-radius: 2px;
   margin-top: 20px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  h3 {
+    margin-top: 0;
+  }
 }
 
 .alert {
