Se agrego link al logo

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,6 +1,6 @@
 .main
   .site-heading
-    = image_tag "mvirtual.png", size: "300x100"
+    = link_to image_tag("mvirtual.png", size: "300x100"), root_path
     %span.subheading Líderes en servicios de outsourcing empresarial
 
   %h2.text-center
