Se cambio numero de contacto en el index

--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -5,7 +5,7 @@
 
   %h2.text-center
     Comunícate sin costo alguno!
-    %span.text-danger 01800 4567 890
+    %span.text-danger MX 01800 4567 88 - US 01844 8001 689
 
 .container
   .row
