Se cambiaron validaciones y colores del index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,3 +133,11 @@ h6 {
   border-color: #54a754;
   background: #60c060;
 }
+
+.text-important {
+  color: #f0ad4e;
+}
+
+.help-block {
+  color: red !important;
+}
