--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -2,7 +2,7 @@
   = f.input :name, label:false, placeholder: "Nombre Completo"
   = f.input :email, label:false, placeholder: "Correo Electrónico"
   = f.input :phone, label:false, placeholder: "Teléfono"
-  = f.input :cel_phone, label:false, placeholder: "Teléfono Alternativo"
+  = f.input :cel_phone, label:false, placeholder: "Teléfono Celular"
   = f.input :city, label:false, placeholder: "Ciudad"
   = f.input :comment, label:false, placeholder: "Comentarios"
-  = f.button :submit, "Regístrate Ahora!!", class: "btn-block btn-primary"
+  = f.button :submit, "Regístrate Ahora!!", class: "btn-block btn-warning"
